tests/invalid/abs_wrong_arg_count/main.py
def run_case() -> None:
    x: int = abs(1, 2)

if __name__ == "__main__":
    run_case()
